feat: add time series for pageviews analytics
